# esp_brookesia_phone

./: .gitignore  DEPLOYMENT_GUIDE.md  LICENSE  README.md  README_PowerController.md  SCREEN_SAVER_DEVELOPMENT.md  UART_TTL_MODULE.md  USB_CDC_MODULE.md  partitions.csv  sdkconfig  sdkconfig.defaults
components/apps/: CMakeLists.txt  apps.h
components/apps/calculator/: Calculator.cpp  Calculator.hpp  README.md
components/apps/image_display/: ImageDisplay.cpp
components/apps/music_player/: MusicPlayer.cpp  音乐播放器组件修改总结.md
components/apps/power_controller/: CMakeLists.txt  ModbusController.cpp  ModbusController.hpp  ModbusTest.cpp  ModbusTest.hpp  PowerController.cpp  PowerController.hpp  README.md
components/apps/power_controller/assets/: README.md
components/apps/power_controller/ui/: CMakeLists.txt  filelist.txt  project.info  ui.c  ui.h  ui_events.h
components/apps/power_controller/ui/components/: ui_comp_hook.c
components/apps/power_controller/ui/fonts/: ui_font_JetBrainsMono24.c  ui_font_JetBrainsMono36.c  ui_font_JetBrainsMono48.c
components/apps/power_controller/ui/screens/: ui_PowerController.c  ui_PowerController.h
components/apps/setting/: Setting.cpp  Setting.hpp
components/apps/uart_ttl/: UARTTTL.cpp  UARTTTL.hpp  UartService.cpp  UartService.hpp
components/apps/uart_usb/: TinyUsbCdcService.cpp  TinyUsbCdcService.hpp  USB_CDC.cpp  USB_CDC.hpp
components/apps/video_player/: VideoPlayer.cpp  VideoPlayer.hpp
main/: CMakeLists.txt  global_screen_saver.cpp  global_screen_saver.hpp  idf_component.yml  main.cpp
(+32 files in other folders)
